css/styles.css
.navbar{
  display:flex;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 500;
  transition: ease-in-out 0.3s;
  padding: 1rem;
}

/* Hides Hamburger Menu when in full screen */
[aria-controls="navbarDropdown"]{
  display: none;

}

.navbar-nav{
  display: flex;
  align-items: center;
}


.navbar .container{
  display: flex;
  align-content:center; 
}


.navbar-brand{
  margin-right: auto;
  font-size: 2rem;
  font-weight: 700;
  width: 100%;
  transition: ease-in-out 0.3s;
  color: var(--white);
}

.navbar-toggle{
  margin: auto;
}

.nav-link a{
  color: var(--white);
  font-size: 0.8125rem;
  font-weight: 600;
  font-family: "Hind", sans-serif;
  text-transform: uppercase;
  margin-right: 2.5rem;
  line-height: 1.25rem;
}

.bg-header, video-demo{
  background-image: url(../assets/images/bg-header-1.jpg);
  background-color: var(--footer);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 20%;
  position: relative;
  z-index: 1;
  padding: 4.6875rem 0;
}

.bg-header{
  background-image: url("../assets/images/bg-header-1.jpg");
  padding: var(--size-150) 0;
}
.video-demo{
  background-image: url("../assets/images/bg-demo.jpg");
background-size: 1800px;
background-repeat: no-repeat;
}

.bg-header::before{
background-image: linear-gradient( 30deg,
rgba(21,27,38, 0.8) 0%,
rgba(0, 0, 0, 0.2) 100%);
position: absolute;
top: 0;
left: 0;
right: 0; 
bottom: 0;
width: 100%;
height: 100%;
z-index: -1;
content: "";
}

.hero-header{
color: var(--white);
}


/* Section 2 */
.why-me {
  padding: var(--size-100) 0;
}

.why-me-wrapper{
  display: flex;
  align-items: center;
}

/* Splits content 50/50 across page in wrapper */
.why-me-wrapper div{
  flex: 1;
}

.why-me-wrapper .block-text {
  padding-right: var(--size-100);
  max-width: 35rem; 
}

.block-text span {
  color: var(--font-color-dark);
  font-weight: 300;
}

.block-text h2 {
  font-size: var(--size-40);
  font-family: "Hinds", sans-serif;
  font-weight: 600;
  color: var(--font-color-dark);
  margin-bottom: var(--size-20);
  line-height: 1.3;
  margin-top: 0.5rem;
}

/* Section 3 */
.bg-contrast {
  background-color: rgb(248, 249, 249);
  padding: var(--size-60) 0;
  margin: 0 auto;
}

.service-grid{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: var(--size-20);
}

.service-card {
  padding: var(--size-20);
  box-shadow: 0 0 10px rgba(48, 63, 100, 0.15);
  background-color: white;
  border-radius: 8px;
}


.service-card span {
  width: var(--size-60);
  height: var(--size-60);
  display: block;
  float: left;
  margin-right: 15px;
  border-radius: 50%;
  background: var(--font-color-light);
}


/* Circle Colors */
span.bg-color-1{
  background-image: linear-gradient(90deg, #9ccdf3 0%, #94aafd 100%);
}

span.bg-color-2{
  background-image: linear-gradient(90deg, #55edc0 0%, #4bdbdb 100%);
}

span.bg-color-3{
  background-image: linear-gradient(90deg, #fda498 0%, #f58b9e 100%);
}

span.bg-color-4{
  background-image: linear-gradient(90deg, #f2a7ca 0%, #c289f4 100%);
}

span.bg-color-5{
  background-image: linear-gradient(90deg, #ffc187 0%, #fe93a7 100%);
}

span.bg-color-6{
  background-image: linear-gradient(90deg, #a1ecff 0%, #7dbcff 100%);
}


/* Section 4 - Video Demo */
.video-demo{
  text-align: center;
}

.video-demo .block-text{
  padding-right: 0;
}

.video-demo .block-text h2,
 .video-demo .block-text p{
  color: var(--white);
  margin: var(--size-50) 0;
}

.video-btn{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: 0 10px 20px rgba(57, 166, 251, 0.3);
}

.video-btn img{
  width: var(--size-100);
  height: var(--size-100);
}

.video-box {
  position: relative;
  margin-bottom: -9.375rem;
  z-index: 100;
}

.video-box > img {
  max-width: 600px;
  border-radius: 8px;
}


/* Section 5 - Price Planning */
.block-text.pricing-header{
  text-align: center;
  padding-right: 0;
  margin: var(--size-100) 0;
}


.pricing-table{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
  justify-content: center;
  gap: var(--size-18);

  /* Centers cards */
  margin: auto; 

  align-items: flex-start;

}

.price-card{
  background-color: var(--white);
  border-radius: 8px;
  padding: var(--size-40) var(--size-16);
}

.price-card .featured{
box-shadow: 0 10px 20px rgba(82, 179, 255, 0.2);
margin-top: -1rem;
}

.price-card h3{
  margin-top: var(--size-40);
  font-size: var(--size-18);
  color: var(--font-color-dark);
  font-weight: 600;
}

.price-card hr{
  margin: 2rem 0 1rem;
}

.price{
  color: var(--font-color-link);
  font-size: var(--size-30);
  font-weight: 600;
}

.price-card h3,
.price-card .price,
.price-card .billed {
text-align: center;
}


.price-card li{
  margin-bottom: var(--size-20);
}

.price-card .icon{
float: right;
font-weight: 600;
}

.price-card .checked{
  color: var(--success);
}

.price-card .times{
  color: var(--danger);
}

.plan-btn-wrapper{
  text-align: center;
}

.plan-btn-wrapper a{
  width: 100%;
}



/* Section 6 - Testimonial  */
.testimonial-grid{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-template-rows: 1fr 1fr;
  gap: var(--size-20);
  margin: 0 auto;
}

.testimonials{
  margin: var(--size-100) 0;
}

.testimonials .block-text{
  padding-right: 0;
  text-align: center;
  margin: var(--size-100) 0;
}

.testimonials-card{
  border: 1px solid #dedede;
  border-radius: 8px;
  padding: var(--size-30);
}

.testimonials-card.lg{
grid-row: 1 / 3;
grid-column: 1 / 2;
}

.testimonials-card .quote{
  width: 4.375rem;
  float: right;
  margin-top: var(--size-16);
}

.testimonials-card.md .bottom p{
font-size: var(--size-14);
}

.testimonials-card .top{
  display: flex;
  align-items: center;
  padding-bottom: var(--size-10);
}

.testimonials-card img.profile {
  width: var(--size-70);
  border-radius: 50%;
  margin-right: var(--size-20);
}

.testimonials-card.lg img.profile {
width: 5rem;
}

.top h4 {
  margin-top: 0;
  margin-bottom: var(--size-10);
  font-weight: 600;
  font-size: var(--size-18);
}

.bottom p {
  margin: 0;
  font-size: var(--size-16);
  line-height: 1.6
}

/* Footer */

.social-icons a {
  padding-left: 10px;
  text-decoration: none;
  color: orange; 
}

footer.bg-footer{
  background-color: var(--footer);
}

footer .footer-bottom{
  background-color: var(--footer-base);
}

footer .footer-top{
display: grid;
grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
gap: var(--size-50);
padding: var(--size-100) 0;
}

footer .footer-col{
  justify-self: center;
}

.footer-top h5{
  color: var(--white);
  font-weight: 500;
  margin-bottom: var(--size-16);
}

footer .contact-info{
  margin-bottom: var(--size-20);
}

.contact-info li{
  color: var(--white);
  margin-bottom: var(--size-10);
}

.contact-info li i{
  padding-right: var(--size-10);
  width: var(--size-30);
}

.social-icons ul li{
  display: inline-block;
  margin-right: var(--size-16);
}

.social-icons ul li a{
  color: var(--white);
  font-size: var(--size-16);
}

.service-wrapper p{
 color: #858497;
}

.recent-posts{
  display: flex;
  width: ;
  margin-bottom: var(--size-16)
}

.recent-posts .post-img-wrapper {
  width: var(--size-100);
  margin-right: var(--size-10);
}

.post-inner h6{
  margin: 0;
}

.post-inner h6 a{
  color: var(--white);
  font-weight: 600;
}

.post-inner span{
  color: var(--font-color-light);
  font-size: var(--size-10);
}

.copyright p{
margin-right: var(--size-50);
}

.footer-bottom{
  padding: var(--size-16) 0;
}

.footer-bottom-wrapper{
  display: flex;
  justify-content: space-around;
  max-width: 768px;
  margin: 0 auto;
  flex-wrap: wrap;
}

.footer-bottom-links ul li{
display: inline-block;
margin-right: var(--size-10);
color: var(--white);
}

.footer-bottom-links ul li a{
  color: var(--white);
}



/* Scroll-Up Arrow */

#scrollUp{
  background-color: transparent;
  background-image: linear-gradient(90deg, #9ccdfe 0%, #94aafd  100%);
  color: var(--white);
  font-size: var(--size-20);
  height: var(--size-50);
  width: var(--size-50);
  line-height: var(--size-50);
  position: fixed;
  bottom: var(--size-30);
  right: var(--size-30);
  text-align: center;
  border-radius: 8px;
  cursor: pointer;
  z-index: 100;

}

